--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.19.5"
+    "hardhat": "^2.19.5",
+    "hardhat-deploy": "^0.11.45"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
-    "@openzeppelin/merkle-tree": "^1.0.6"
+    "@openzeppelin/merkle-tree": "^1.0.6",
+    "dotenv": "^16.4.4"
   }
 }
